cbits/Bullet.h

int btGjkPairDetector_m_catchDegeneracies_get(void *c); //attribute: int btGjkPairDetector->m_catchDegeneracies
void* btManifoldPoint_new0(); //constructor: btManifoldPoint  ( ::btManifoldPoint::* )(  ) 
void* btManifoldPoint_new1(float* p0,float* p1,float* p2,float p3); //constructor: btManifoldPoint  ( ::btManifoldPoint::* )( ::btVector3 const &,::btVector3 const &,::btVector3 const &,::btScalar ) 
void btManifoldPoint_free(void *c);
 
void btManifoldPoint_setDistance(void *c,float p0); //method: setDistance void ( ::btManifoldPoint::* )( ::btScalar ) 
int btManifoldPoint_getLifeTime(void *c); //method: getLifeTime int ( ::btManifoldPoint::* )(  ) const
float btManifoldPoint_getDistance(void *c); //method: getDistance ::btScalar ( ::btManifoldPoint::* )(  ) const
void btManifoldPoint_getPositionWorldOnB(void *c,float* ret); //method: getPositionWorldOnB ::btVector3 const & ( ::btManifoldPoint::* )(  ) const
float btManifoldPoint_getAppliedImpulse(void *c); //method: getAppliedImpulse ::btScalar ( ::btManifoldPoint::* )(  ) const
void btManifoldPoint_getPositionWorldOnA(void *c,float* ret); //method: getPositionWorldOnA ::btVector3 const & ( ::btManifoldPoint::* )(  ) const
// attribute not supported: //attribute: ::btConstraintRow[3] btManifoldPoint->mConstraintRow
void btManifoldPoint_m_appliedImpulse_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_appliedImpulse
float btManifoldPoint_m_appliedImpulse_get(void *c); //attribute: ::btScalar btManifoldPoint->m_appliedImpulse
void btManifoldPoint_m_appliedImpulseLateral1_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_appliedImpulseLateral1
float btManifoldPoint_m_appliedImpulseLateral1_get(void *c); //attribute: ::btScalar btManifoldPoint->m_appliedImpulseLateral1
void btManifoldPoint_m_appliedImpulseLateral2_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_appliedImpulseLateral2
float btManifoldPoint_m_appliedImpulseLateral2_get(void *c); //attribute: ::btScalar btManifoldPoint->m_appliedImpulseLateral2
void btManifoldPoint_m_combinedFriction_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_combinedFriction
float btManifoldPoint_m_combinedFriction_get(void *c); //attribute: ::btScalar btManifoldPoint->m_combinedFriction
void btManifoldPoint_m_combinedRestitution_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_combinedRestitution
float btManifoldPoint_m_combinedRestitution_get(void *c); //attribute: ::btScalar btManifoldPoint->m_combinedRestitution
void btManifoldPoint_m_contactCFM1_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_contactCFM1
float btManifoldPoint_m_contactCFM1_get(void *c); //attribute: ::btScalar btManifoldPoint->m_contactCFM1
void btManifoldPoint_m_contactCFM2_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_contactCFM2
float btManifoldPoint_m_contactCFM2_get(void *c); //attribute: ::btScalar btManifoldPoint->m_contactCFM2
void btManifoldPoint_m_contactMotion1_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_contactMotion1
float btManifoldPoint_m_contactMotion1_get(void *c); //attribute: ::btScalar btManifoldPoint->m_contactMotion1
void btManifoldPoint_m_contactMotion2_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_contactMotion2
float btManifoldPoint_m_contactMotion2_get(void *c); //attribute: ::btScalar btManifoldPoint->m_contactMotion2
void btManifoldPoint_m_distance1_set(void *c,float a); //attribute: ::btScalar btManifoldPoint->m_distance1
float btManifoldPoint_m_distance1_get(void *c); //attribute: ::btScalar btManifoldPoint->m_distance1
void btManifoldPoint_m_index0_set(void *c,int a); //attribute: int btManifoldPoint->m_index0
int btManifoldPoint_m_index0_get(void *c); //attribute: int btManifoldPoint->m_index0