Physics/Bullet/Raw/BulletCollision/NarrowPhaseCollision.chs

{#fun btGjkPairDetector_m_catchDegeneracies_get    `( BtGjkPairDetectorClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
-- * btManifoldPoint
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#45>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_new0 as btManifoldPoint0    {  } -> `BtManifoldPoint' mkBtManifoldPoint* #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#61>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_new1 as btManifoldPoint1    {  withVec3* `Vec3' , withVec3* `Vec3' , withVec3* `Vec3' ,  `Float'  } -> `BtManifoldPoint' mkBtManifoldPoint* #}
{#fun btManifoldPoint_free    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#143>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_setDistance as btManifoldPoint_setDistance    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
,  `Float'  -- ^ dist
 } ->  `()'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#128>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_getLifeTime as btManifoldPoint_getLifeTime    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Int'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#124>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_getDistance as btManifoldPoint_getDistance    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#138>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_getPositionWorldOnB as btManifoldPoint_getPositionWorldOnB    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#149>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_getAppliedImpulse as btManifoldPoint_getAppliedImpulse    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
 } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#133>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_getPositionWorldOnA as btManifoldPoint_getPositionWorldOnA    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  -- ^ 
, allocaVec3-  `Vec3'  peekVec3* -- ^ 
 } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#104>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulse_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#104>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulse_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#107>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulseLateral1_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#107>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulseLateral1_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#108>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulseLateral2_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#108>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_appliedImpulseLateral2_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#94>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_combinedFriction_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#94>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_combinedFriction_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_combinedRestitution_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#95>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_combinedRestitution_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#111>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactCFM1_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#111>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactCFM1_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#112>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactCFM2_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#112>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactCFM2_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactMotion1_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#109>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactMotion1_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#110>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactMotion2_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#110>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_contactMotion2_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_distance1_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Float'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#93>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_distance1_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Float'   #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#100>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_index0_set    `( BtManifoldPointClass bc )' =>     { withBt* `bc' ,  `Int'  } -> `()' #}
{- | <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.h?r=2223#100>
     <http://code.google.com/p/bullet/source/browse/trunk/src/BulletCollision/NarrowPhaseCollision/btManifoldPoint.cpp?r=2223>
-}
{#fun btManifoldPoint_m_index0_get    `( BtManifoldPointClass bc )' =>     { withBt* `bc'  } ->  `Int'   #}
